# postgrest-demo

./: Makefile
db/: sqitch.conf  sqitch.plan
db/deploy/postgrest/: schema.sql
db/deploy/postgrest/functions/: get-current-account-id.sql  register.sql
db/deploy/postgrest/roles/: account.sql  anonymous.sql
db/deploy/postgrest/tables/: account.sql  event-space.sql  private-logs.sql
db/deploy/public/extensions/: temporal-tables.sql  uuid-ossp.sql
db/revert/postgrest/: schema.sql
db/revert/postgrest/functions/: get-current-account-id.sql  register.sql
db/revert/postgrest/roles/: account.sql  anonymous.sql
db/revert/postgrest/tables/: account.sql  event-space.sql  private-logs.sql
db/revert/public/extensions/: temporal-tables.sql  uuid-ossp.sql
db/verify/postgrest/: schema.sql
db/verify/postgrest/functions/: get-current-account-id.sql  register.sql
db/verify/postgrest/roles/: account.sql  anonymous.sql
db/verify/postgrest/tables/: account.sql  event-space.sql  private-logs.sql
db/verify/public/extensions/: temporal-tables.sql  uuid-ossp.sql
test/: .gitignore  LICENSE  stack.yaml  test.cabal
test/src/: Main.hs
