name:               test
version:            0.1.0.0
synopsis:           Simple project template from stack
description:        Please see README.md
homepage:           http://github.com/githubuser/test#readme
license:            BSD3
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2010 Author Here
category:           Web
build-type:         Simple
cabal-version:      >=1.10

executable test
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    ghc-options:        -rtsopts

    build-depends:      base            ==4.*

                     ,  aeson
                     ,  aeson-casing
                     ,  bytestring
                     ,  lens
                     ,  lens-aeson
                     ,  postgresql-simple
                     ,  postgresql-simple-url
                     ,  tasty
                     ,  tasty-hunit
                     ,  tasty-quickcheck
                     ,  uuid
                     ,  uuid-aeson
                     ,  wreq
